# solder

./: .gitignore  Cargo.toml  Config-template.toml  README.md  schema.sql
src/: .gitignore  config.rs  error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  query.rs  server.rs
src/client/: get_block_from_slot.rs  gettable.rs  mod.rs  rpc.rs  rpc_manager.rs  rpc_worker.rs  subscribable.rs  subscribe_blocks.rs  subscribe_logs.rs  subscribe_slot.rs  ws.rs
src/database/: conn_pool.rs  manager.rs  mod.rs
src/models/: aggregate.rs  block.rs  log.rs  mod.rs  transaction.rs
src/pool/: mod.rs  thread_pool.rs
src/processor/: data_processor.rs  mod.rs  process_block.rs  process_log.rs  processable.rs  processing_worker.rs  processing_worker_manager.rs
src/storage/: mod.rs  storable.rs  storage_worker.rs  storage_worker_manager.rs  store_block.rs  store_log.rs
src/websocket/: client.rs  mod.rs  subscribable.rs  subscribe_blocks.rs  subscribe_logs.rs
src/worker/: mod.rs  processing_worker.rs  processing_worker_manager.rs  worker.rs  worker_manager.rs
